# lab3sem2

./: otchet.doc
Задание 1/: CMakeLists.txt  Circle.cpp  Circle.h  Figures.cpp  Figures.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
Задание 2/: Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  Fish.cpp  Fish.h  FlyingBird.cpp  FlyingBird.h  main.cpp
Задание 3/: CMakeLists.txt  Human.cpp  Human.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
Задание 4/: CMakeLists.txt  CubeSummator.cpp  CubeSummator.h  SquareSummator.cpp  SquareSummator.h  Summator.cpp  Summator.h  main.cpp
